tests/success/killer.tig
let
	function f(n : int) = 
	let
		var a := n
	in
		let
			function g(n : int) = a:= n - 1
		in
			printi(a);
			if a > 0 then
			if (a + 1)/2*2 = a
				then f(a - 1)
				else ( g(a); f(a) )
		end
	end
in
	f(4)
end