tests/fail/invalid_mutually_recursive_function_depth_3.tig
let
    function f(b : B) : int = g(b.field)
    type B = {field : int}
    function g(i : int) : int = h(B{field = i+2})
    type C = B
    var a:= 1
    function h(c : C) : int = f(c)
in
end
